Correct a small typo in index.html

--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -167,7 +167,7 @@ function init() {
  
   <p>This page does not use any plugins but is based exclusively on the draft version WebAudio API. You'll need Chrome or Firefox to make it play the music. The visual effects work best in Chrome. (If Firefox passes out - press 'reload'... it's experimental.)</p>
   
-  <p>Contrarry to most other HTML5 based pages out there, the music here is NOT based on OscillatorNode based waveforms or the playback of some sampledata file. Instead the samples here are completely calculated within JavaScript by running the Tiny'R'Sid emulator logic.</p>  
+  <p>Contrary to most other HTML5 based pages out there, the music here is NOT based on OscillatorNode based waveforms or the playback of some sampledata file. Instead the samples here are completely calculated within JavaScript by running the Tiny'R'Sid emulator logic.</p>  
  
   <p>Please use the below controls to navigate between the songs that you have dropped on the player:
   <span id="controls"></span>
