updated web demo

--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -181,7 +181,7 @@ function init() {
   <p>This page does not use any plugins but is based exclusively on HTML5/JavaScript/WebAudio. You'll need a reasonably recent browser to make it play the music.</p>
   
   <p>The music samples are completely calculated within JavaScript by running the Tiny'R'Sid C64 emulator logic (playing original 
-  C64 program files from the <a href="http://www.hvsc.de/" target="_blank">HVSC</a>). You can bring your own music files by dropping them on the floppy drive image.</p>  
+  C64 program files from the <a href="http://www.hvsc.de/" target="_blank">HVSC</a>). You can bring your own music files by drag&dropping them on the floppy drive image.</p>  
  
   <p>Please use the below controls to navigate between the songs that you have dropped on the player:
   <span id="controls"></span>
