added accessors for NTSC mode/SID model

--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -7,8 +7,7 @@
 
  	Copyright (C) 2013 Juergen Wothke
 
- Tiny'R'Sid is a C64 emulator that plays *.sid music files. It plays legacy PSID as well
- as more recent RSID formats.
+ Tiny'R'Sid is a C64 music emulator - see https://www.wothke.ch/tinyrsid/
 
  Credits: The visualization used on this page was strongly "inspired" by this demo:
  http://html5-demos.appspot.com/static/webaudio/createMediaSourceElement.html
@@ -28,7 +27,7 @@
  Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301 USA
 -->
 <meta http-equiv="X-UA-Compatible" content="chrome=1" />
-<title>TinyJSid - the first HTML5/JavaScript C64 music player</title>
+<title>WebSid - the first HTML5/JavaScript C64 music player</title>
 
 <meta name="description" content="Latest JavaScript/WebAudio version of Tiny'R'Sid">
 <meta name="author" content="Juergen Wothke">
@@ -181,7 +180,8 @@ function init() {
   <p>This page does not use any plugins but is based exclusively on HTML5/JavaScript/WebAudio. You'll need a reasonably recent browser to make it play the music.</p>
   
   <p>The music samples are completely calculated within JavaScript by running the Tiny'R'Sid C64 emulator logic (playing original 
-  C64 program files from the <a href="http://www.hvsc.de/" target="_blank">HVSC</a>). You can bring your own music files by drag&dropping them on the floppy drive image.</p>  
+  C64 program files from the <a href="http://www.hvsc.de/" target="_blank">HVSC</a>). You can bring your own music files by drag&dropping them on the below C64 image.
+  (Plays *.sid, *.psid, *.rsid and Compute! *.mus music files.)</p>  
  
   <p>Please use the below controls to navigate between the songs that you have dropped on the player:
   <span id="controls"></span>
